[package]
name = "aether-unified"
version = "1.0.1"
edition = "2021"
authors = ["Aether Team"]
license = "MIT"
description = "AETHER SEDC - Self-Evolving DAG Consensus - Unified Implementation"

[[bin]]
name = "aether"
path = "src/main.rs"

[[bin]]
name = "aether-gui"
path = "src/gui.rs"

[workspace]
members = []

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Cryptography
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = "2.1"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
bip39 = "2.0"
bs58 = "0.5"
aes-gcm = "0.9"
pbkdf2 = "0.12"

# RPC
jsonrpsee = { version = "0.22", features = ["server", "macros"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# HTTP
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Storage
sled = "0.34"

# Utils
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rayon = "1.8"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
colored = "2.1"

# GUI
eframe = "0.27"
egui = "0.27"

[dev-dependencies]
tempfile = "3.8"
